Fix overflow items and loading icon

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,6 +7,7 @@
 }
 
 main {
+  display: grid;
   overflow: auto;
 }
 
