--- a/src/app/features/persons/persons/persons.component.scss
+++ b/src/app/features/persons/persons/persons.component.scss
@@ -1,2 +1,5 @@
-.card-grid {
+:host {
+  display: grid;
+  grid-template-rows: auto 1fr;
+  height: 100%;
 }
